--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/node": "^22.7.7",
     "axios": "^1.7.7",
     "discord": "^0.8.2",
+    "discord.js": "^14.16.3",
     "express": "^4.21.1",
     "typescript": "^5.6.3"
   },
